--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Style for the scrollbar */
+*::-webkit-scrollbar {
+    width: 6px;
+    background-color: transparent;
+    /* set background color to transparent */
+}
+
+/* Style for the scrollbar thumb */
+*::-webkit-scrollbar-thumb {
+    background-color: #b3b3b3;
+    border-radius: 10px;
+}
+
+/* Style for the scrollbar track */
+*::-webkit-scrollbar-track {
+    background-color: transparent;
+    /* set background color to transparent */
+}
+
+/* Style for the scrollbar corner */
+*::-webkit-scrollbar-corner {
+    background-color: #b3b3b3;
+}
